Cambio imagenes y responsive home

--- a/Konex/index.html
+++ b/Konex/index.html
@@ -82,32 +82,32 @@
         </div>
         <div class="info-eventos">
             <div>
-                <img src="img/coverboston.jpeg" alt="Imagen del evento 1">
-                <h5>Viernes 10 de Noviembre. 20hs</h5>
+                <img src="img/paltamood.jpeg" alt="Palta Mood">
+                <h5>Viernes 10 de Noviembre 20hs</h5>
                 <div class="line"></div>
-                <h3>DANCE PARTY</h3>
+                <h3>PALTA & THE MOOD</h3>
             </div>
             <div>
-                <img src="img/covermetallica.jpeg" alt="Imagen del evento 2">
-                <h5>Viernes 10 de Noviembre. 20hs</h5>
+                <img src="img/muda.jpeg" alt="Muda">
+                <h5>Viernes 17 de Noviembre 22hs</h5>
                 <div class="line"></div>
-                <h3>DANCE PARTY</h3>
+                <h3>MUDA</h3>
             </div>
             <div>
-                <img src="img/coversleep.jpeg" alt="Imagen del evento 3">
-                <h5>Viernes 10 de Noviembre. 20hs</h5>
+                <img src="img/cumbiakonex.jpeg" alt="Cumbia Konex">
+                <h5>Viernes 24 de Noviembre 23hs</h5>
                 <div class="line"></div>
-                <h3>DANCE PARTY</h3>
+                <h3>CUMBIA KONEX</h3>
             </div>
             <div>
-                <img src="img/psychodelic.jpeg" alt="Imagen del evento 3">
-                <h5>Viernes 10 de Noviembre. 20hs</h5>
+                <img src="img/backintime.jpeg" alt="Back in time">
+                <h5>Sábado 28 de Octubre 20hs</h5>
                 <div class="line"></div>
-                <h3>DANCE PARTY</h3>
+                <h3>BACK IN TIME</h3>
             </div>
         </div>
     </section>
-    <section>
+    <section class="opiniones">
         <div id="subtitulo">
             <h3>OPINIONES DE LA COMUNIDAD</h3>
         </div>
@@ -123,18 +123,25 @@
                 <img src="img/logo.png" alt="logo">
             </div>
             <p>
-                Sarmiento 3131, CP
-
+                Sarmiento 3131, C1196 CABA
             </p>
             <p>
-                CIUDAD DE BUENOS AIRES, ARGENTINA
+                Creando experiencias artísticas
             </p>
         </div>
         <div class="redes">
-            <img>
-            <img>
-            <img>
-            <img>
+            <a href="https://www.instagram.com/cckonex/">
+                <img src="img/instagramlogogris.png">
+            </a>
+            <a href="https://www.facebook.com/CIUDADCULTURALKONEX/?locale=es_LA">
+                <img src="img/facebooklogogris.png">
+            </a>
+            <a href="https://www.youtube.com/@cumbiakonex">
+                <img src="img/youtubelogogris.png">
+            </a>
+            <a href="https://twitter.com/CCKonex">
+                <img src="img/twitterlogogris.png">
+            </a>
         </div>
     </footer>
     <script src="script.js"></script>
