SEO Keywords y agregado de alt

--- a/Konex/index.html
+++ b/Konex/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="diseño web">
-    <meta description="keywords" content="eventos konex">
+    <meta description="keywords"
+        content="eventos, konex, recitales, buenos aires, cumbia konex, fiesta de la bomba, fiesta, fiesta konex, concierto, musica, musica en vivo, musica en vivo buenos aires, arte, mejores eventos argentina, mejores fiestas, exposicion, mejor exposision de arte buenos aires, ir a fiesta, ir a evento, ir a recital, recitales gratis">
+    <meta name="description" content="Konex: Encuentra los mejores eventos y arte en Buenos Aires">
     <link rel="stylesheet" href="styles.css">
     <!-- <link rel="stylesheet" href="normalize.css"> -->
     <!-- link tipografías-->
@@ -22,7 +23,7 @@
     <header>
         <div class="contenedor">
             <div id="logo">
-                <img src="img/logo.png" alt="logo">
+                <img src="img/logo.png" alt="logo konex">
             </div>
             <nav>
                 <ul>
@@ -36,18 +37,18 @@
     </header>
     <section>
         <div class="titulo">
-            <h1>DESTACADO</h1>
+            <h1>EVENTOS DESTACADOS</h1>
         </div>
         <div class="container">
             <ul class="slider">
                 <li id="slide1">
-                    <img src="img/carrousel.png" />
+                    <img src="img/carrousel.png" alt="fin de fiesta" />
                 </li>
                 <li id="slide2">
-                    <img src="img/carrousel2.png" />
+                    <img src="img/carrousel2.png" alt="evento niños" />
                 </li>
                 <li id="slide3">
-                    <img src="img/carrousel3.png" />
+                    <img src="img/carrousel3.png" alt="musicaliza pipo" />
                 </li>
             </ul>
             <ul class="menu">
@@ -120,7 +121,7 @@
     <footer>
         <div class="content">
             <div id="logo-footer">
-                <img src="img/logo.png" alt="logo">
+                <img src="img/logo.png" alt="logo konex">
             </div>
             <p>
                 Sarmiento 3131, C1196 CABA
@@ -131,16 +132,16 @@
         </div>
         <div class="redes">
             <a href="https://www.instagram.com/cckonex/">
-                <img src="img/instagramlogogris.png">
+                <img src="img/instagramlogogris.png" alt="logo instagram">
             </a>
             <a href="https://www.facebook.com/CIUDADCULTURALKONEX/?locale=es_LA">
-                <img src="img/facebooklogogris.png">
+                <img src="img/facebooklogogris.png" alt="logo facebook">
             </a>
             <a href="https://www.youtube.com/@cumbiakonex">
-                <img src="img/youtubelogogris.png">
+                <img src="img/youtubelogogris.png" alt="logo youtube">
             </a>
             <a href="https://twitter.com/CCKonex">
-                <img src="img/twitterlogogris.png">
+                <img src="img/twitterlogogris.png" alt="logo twitter">
             </a>
         </div>
     </footer>
